<resources>
    <string name="app_name">ShowMyExerciseApp</string>
    <string name="btn_back">&#60; back</string>
    <string name="fName"></string>
    <string name="lName"></string>
    <string name="email"></string>
    <string name="password"></string>
    <string name="confirm_password"></string>
    <string name="workout_result">You have done %1$d minuets Exercise</string>

    <!--  POST  -->
    <string name="userName">UserName</string>
    <string name="content">Content</string>
    <string name="comment">COMMENT</string>
    <string name="like">LIKE</string>
</resources>