<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/dark_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="#919191">

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="post image"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postUserIcon"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/postContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:text="@string/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postImage" />

        <Button
            android:id="@+id/postCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/postContent"
            app:layout_constraintTop_toBottomOf="@+id/postContent" />

        <Button
            android:id="@+id/postLikeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/like"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/postContent"
            app:layout_constraintTop_toBottomOf="@+id/postContent" />

        <ImageView
            android:id="@+id/postUserIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:contentDescription="user icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/postUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/userName"
            android:textColor="#212121"
            app:layout_constraintBottom_toBottomOf="@+id/postUserIcon"
            app:layout_constraintStart_toEndOf="@+id/postUserIcon"
            app:layout_constraintTop_toTopOf="@+id/postUserIcon" />

        <TextView
            android:id="@+id/postTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>